--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.9",
+    "styled-theming": "^2.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
