--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://imiryna.github.io/Learn-lingo/",
   "dependencies": {
     "@babel/plugin-transform-private-property-in-object": "^7.24.1",
+    "@reduxjs/toolkit": "^2.2.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,6 +15,7 @@
     "@types/react-dom": "^18.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.9",
